# michitray

./: .clang-format  .dockerignore  .gitignore  README.md  meson.build
.github/workflows/: ci.yml  static.yml
coverage/: Makefile
docs/: Doxyfile  Makefile  header.html
docs/md/: index.md
mp3/: meson.build
scripts/: check-format.sh  ci-setup-debian.sh  ci-setup.sh  coverage.sh  docs.sh  generate-silence.py
src/: App.cpp  App.hpp  Config.cpp  Config.hpp  Indicator.cpp  Indicator.hpp  Sound.hpp  TrayMenu.cpp  TrayMenu.hpp  main.cpp  meson.build
subprojects/: .dockerignore  .gitignore
tests/: meson.build  test.cfg  test.cpp
